# xamla_egomo

./: CMakeLists.txt  LICENSE  README.md  package.xml
controller/: arm_controller_ur5.yaml  cart_arm_controller_ur5.yaml
egomo_3d_printed_parts/: README.md
egomo_3d_printed_parts/egomo-1/: README.md  xamla_cap.stl  xamla_cap_hole.stl  xamla_mount_base.stl  xamla_mount_c920_front_0_left.stl  xamla_mount_c920_front_0_right.stl  xamla_mount_c920_left.stl  xamla_mount_c920_right.stl  xamla_mount_flange.stl  xamla_mount_laser_bottom.stl  xamla_mount_laser_top.stl  xamla_mount_rpi_bottom.stl  xamla_mount_rpi_middle.stl  xamla_mount_rpi_top.stl
egomo_demos/: README.md
egomo_demos/clear_table/: clearTable.lua
egomo_demos/core/: ObjectsOnPlaneSegmentation.lua  xamla3d.lua
egomo_demos/duplo_stacking/: ObjectsOnPlaneSegmentation.lua  README.md  adaptiveStackingDuplo.lua  duploDetection.lua
egomo_depthcam/: CMakeLists.txt  egomo_depthcam.launch  package.xml
egomo_depthcam/include/egomo_depthcam/: openni2_device.h  openni2_exception.h  openni2_listener.h
egomo_depthcam/msg/: DepthImage.msg  LZ4compressedImg.msg
egomo_depthcam/nodes/: egomo_depthcam_node.cpp  egomo_depthcam_node.h
egomo_depthcam/src/: openni2_device.cpp  openni2_exception.cpp  openni2_listener.cpp
egomo_depthcam/srv/: SetParameters.srv
egomo_docs/: README.md  generate_html.sh  html_generator.py  index.html
egomo_ioboard/: README.md
egomo_msgs/: CMakeLists.txt  README.md  package.xml
egomo_msgs/action/: EgomoGripper.action  EgomoGripperActivate.action  EgomoGripperPos.action
egomo_msgs/msg/: XamlaGripper.msg  tfTrajectory.msg
egomo_msgs/srv/: LoggerCommand.srv  SendGripperSetCommand.srv
egomo_node/: CMakeLists.txt  README.md  package.xml  ros_egomo_node.lua
egomo_pi_image/: README.md
egomo_tools/: CMakeLists.txt  egomo-tools-scm-1.rockspec
egomo_tools/lua/: compressionLZ4_interface.lua  env.lua  exponential_smoothing.lua  force_torque_interface.lua  gripper_interface.lua  init.lua  robot_control.lua  structureio_interface.lua  webcam_interface.lua
egomo_tools/src/: lz4Compression.cpp  reorder_bits.cpp
egomo_ur5/: CMakeLists.txt  README.md  package.xml
egomo_ur5/controller/: arm_controller_ur5.yaml  cart_arm_controller_ur5.yaml
egomo_ur5/launch/: controller_utils.launch  ur5_description.launch  xamlaEgomo_gazebo.launch  xamlaEgomo_ur5.launch
egomo_ur5/meshes/egomo-1/collision/: egomo-1.stl
egomo_ur5/meshes/robotiq-2-finger-85/collision/: gripper_base.stl  gripper_coupling.stl  gripper_finger_left_1.stl  gripper_finger_left_2.stl  gripper_finger_left_3.stl  gripper_finger_left_4.stl  gripper_finger_right_1.stl  gripper_finger_right_2.stl  gripper_finger_right_3.stl  gripper_finger_right_4.stl
egomo_ur5/meshes/robotiq-2-finger-85/visual/: gripper_finger_left_3.dae  gripper_finger_right_1.dae
egomo_ur5/meshes/robotiq-ft300/collision/: ft300.stl
egomo_ur5/meshes/ur5/collision/: base.stl  forearm.stl  shoulder.stl  upper_arm.stl  wrist_1.stl  wrist_3.stl
egomo_ur5/meshes/ur5/visual/: forearm.dae  shoulder.dae  wrist_1.dae  wrist_3.dae
egomo_ur5/urdf/: default_egomo_sensor_parameters.xacro  default_ur5_DH_parameters.xacro  egomo_sensor.urdf.xacro  robotiq_85_gripper.urdf.xacro  ur5_egomo_table.urdf  ur5_egomo_table.urdf.xacro  ur5_egomo_table_ori.urdf.xacro  ur5_robot.urdf.xacro
egomo_webcam/: CMakeLists.txt  README.md  egomo_webcam.launch  package.xml
egomo_webcam/include/egomo_webcam/: web_cam.h
egomo_webcam/nodes/: egomo_webcam_node.cpp  egomo_webcam_node.h
egomo_webcam/src/: web_cam.cpp
egomo_webcam/srv/: GetNewImage.srv  PublishNewImage.srv  SetCameraFocus.srv  SetV4lParameter.srv
launch/: controller_utils.launch  ur5_description.launch  xamlaEgomo_gazebo.launch  xamlaEgomo_ur5.launch  xamlaEomo_gazeboo.launch
meshes/egomo-1/collision/: egomo-1.stl
meshes/egomo-1/visual/: egomo-1.dae
meshes/robotiq-2-finger-85/collision/: gripper_base.stl  gripper_finger_left_1.stl  gripper_finger_left_2.stl  gripper_finger_right_2.stl  gripper_finger_right_3.stl  gripper_finger_right_4.stl
meshes/robotiq-2-finger-85/visual/: gripper_base.dae  gripper_coupling.dae  gripper_finger_left_1.dae  gripper_finger_left_2.dae  gripper_finger_left_3.dae  gripper_finger_left_4.dae
meshes/robotiq-ft300/visual/: ft300.dae
meshes/ur5/collision/: base.stl  forearm.stl  shoulder.stl  wrist_2.stl  wrist_3.stl
meshes/ur5/visual/: base.dae  upper_arm.dae
urdf/: robotiq-2-finger-85.urdf  ur5.urdf.xacro  ur5_egomo_table.urdf  ur5_robot.urdf.xacro
xamla_egomo/: CMakeLists.txt  package.xml
