<?xml version="1.0"?>
<package>
  <name>egomo_ur5</name>
  <version>1.0.0</version>
  <description>
      URDF description of Xamla egomo sensorhead on Universal UR5
  </description>

  <maintainer email="andreas.koepf@xamla.com">Andreas Koepf</maintainer>
  <author email="alexander.kahlkopf@xamla.com">Alexander Kahlkopf</author>

  <license>BSD</license>

  <url type="website">http://www.xamla.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
