<package>
  <name>xamla_egomo</name>
  <version>1.0.0</version>
  <description>ENTE</description>
  <maintainer email="xamla_egomo@xamla.de">Der Jens</maintainer>
  <license>BSD</license>
  <url type="website">http://www.xamla.de</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>egomo_msgs</run_depend>
  <run_depend>egomo_ur5</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
