<package>
  <name>xamla_egomo</name>
  <version>1.0.0</version>
  <description>Xamla Egomo</description>
  <maintainer email="egomo@xamla.com">Xamla</maintainer>
  <license>BSD</license>
  <url type="website">http://www.xamla.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>egomo_msgs</run_depend>
  <run_depend>egomo_ur5</run_depend>
  <run_depend>egomo_node</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
